src/tests/snapshots/nyx__tests__window_opening__check_target_size@dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 640 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 360, bounds: 1280 × 720, states: [Activated]
