src/tests/snapshots/nyx__tests__window_opening__check_target_size@dhU-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 632 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 632 × 0, bounds: 1272 × 712, states: [Activated]
